--- a/Nutrition_Tracker.html
+++ b/Nutrition_Tracker.html
@@ -1,127 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Daily Nutrition Tracker</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Nutrition Tracker</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    table, th, td {
-      border: 1px solid #ddd;
-      border-collapse: collapse;
-      padding: 8px;
-    }
-    table {
-      width: 100%;
-      margin-top: 20px;
-    }
-    input {
-      margin: 5px;
-    }
-    button {
-      margin-top: 10px;
-    }
+    body { font-family: Arial; padding: 20px; }
+    input, select, button { margin: 5px; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
   </style>
 </head>
 <body>
-  <h1>Daily Nutrition Tracker</h1>
-  <label>Food Name: <input type="text" id="foodName" placeholder="e.g. Chicken Breast"></label>
-  <label>Quantity (g): <input type="number" id="quantity"></label>
-  <button onclick="addFood()">Add Food</button>
+  <h2>Nutrition Tracker</h2>
 
-  <table id="logTable">
+  <label>Food:
+    <input id="foodName" placeholder="e.g. chicken breast" oninput="autocompleteFood()" list="foodList">
+  </label>
+  <datalist id="foodList"></datalist>
+
+  <label>Amount (grams):
+    <input type="number" id="amount" value="100">
+  </label>
+
+  <button onclick="addEntry()">Add</button>
+  <button onclick="clearAll()">Clear All</button>
+
+  <table id="entriesTable">
     <thead>
-      <tr>
-        <th>Food</th>
-        <th>Quantity (g)</th>
-        <th>Calories</th>
-        <th>Protein (g)</th>
-        <th>Carbs (g)</th>
-        <th>Fats (g)</th>
-        <th>Actions</th>
-      </tr>
+      <tr><th>Food</th><th>Grams</th><th>Protein (g)</th><th>Carbs (g)</th><th>Fat (g)</th><th>Actions</th></tr>
     </thead>
     <tbody></tbody>
-    <tfoot>
-      <tr>
-        <td colspan="2"><strong>Totals:</strong></td>
-        <td id="totalCal">0</td>
-        <td id="totalProtein">0</td>
-        <td id="totalCarbs">0</td>
-        <td id="totalFats">0</td>
-        <td></td>
-      </tr>
-    </tfoot>
   </table>
 
+  <h3>Total (g)</h3>
+  <p id="totals">Protein: 0 | Carbs: 0 | Fat: 0</p>
+
   <script>
-    const foodDatabase = {
-      "chicken breast": { calories: 165, protein: 31, carbs: 0, fats: 3.6 },
-      "steak": { calories: 271, protein: 25, carbs: 0, fats: 19 },
-      "ground beef": { calories: 250, protein: 26, carbs: 0, fats: 17 },
-      "chicken drumstick": { calories: 172, protein: 22, carbs: 0, fats: 9 },
-      "rice": { calories: 130, protein: 2.4, carbs: 28, fats: 0.2 },
-      "egg": { calories: 78, protein: 6.3, carbs: 0.6, fats: 5.3 },
-      "broccoli": { calories: 34, protein: 2.8, carbs: 6.6, fats: 0.4 },
-      "almonds": { calories: 579, protein: 21, carbs: 22, fats: 50 },
+    const foodDB = {
+      "chicken breast": { protein: 31, carbs: 0, fat: 3.6 },
+      "steak": { protein: 25, carbs: 0, fat: 19 },
+      "ground beef": { protein: 26, carbs: 0, fat: 20 },
+      "chicken drumsticks": { protein: 28, carbs: 0, fat: 8 },
+      "salmon": { protein: 20, carbs: 0, fat: 13 },
+      "tuna": { protein: 29, carbs: 0, fat: 1 },
+      "shrimp": { protein: 24, carbs: 0, fat: 1 },
+      "cheese": { protein: 25, carbs: 1.3, fat: 33 },
+      "yogurt": { protein: 10, carbs: 4, fat: 5 },
+      "milk": { protein: 3.4, carbs: 5, fat: 3.6 },
+      "banana": { protein: 1.3, carbs: 23, fat: 0.3 },
+      "apple": { protein: 0.3, carbs: 14, fat: 0.2 },
+      "orange": { protein: 0.9, carbs: 12, fat: 0.1 },
+      "broccoli": { protein: 2.8, carbs: 7, fat: 0.4 },
+      "spinach": { protein: 2.9, carbs: 3.6, fat: 0.4 },
+      "carrots": { protein: 0.9, carbs: 10, fat: 0.2 },
+      "brown rice": { protein: 2.6, carbs: 23, fat: 0.9 },
+      "oats": { protein: 13, carbs: 68, fat: 7 },
+      "bread": { protein: 9, carbs: 49, fat: 3 },
+      "lentils": { protein: 9, carbs: 20, fat: 0.4 },
+      "black beans": { protein: 9, carbs: 23, fat: 0.3 },
+      "chickpeas": { protein: 9, carbs: 27, fat: 2.6 },
+      "almonds": { protein: 21, carbs: 22, fat: 49 },
+      "peanut butter": { protein: 25, carbs: 20, fat: 50 }
     };
 
-    let log = [];
+    const entries = JSON.parse(localStorage.getItem("nutritionEntries")) || [];
 
-    function addFood() {
-      const name = document.getElementById('foodName').value.trim().toLowerCase();
-      const qty = parseFloat(document.getElementById('quantity').value);
-      if (!foodDatabase[name]) {
-        alert("Food not found in database");
+    function updateFoodList() {
+      const list = document.getElementById("foodList");
+      list.innerHTML = "";
+      Object.keys(foodDB).forEach(food => {
+        const option = document.createElement("option");
+        option.value = food;
+        list.appendChild(option);
+      });
+    }
+
+    function autocompleteFood() {
+      const input = document.getElementById("foodName").value.toLowerCase();
+      updateFoodList();
+    }
+
+    function addEntry() {
+      const food = document.getElementById("foodName").value.toLowerCase();
+      const amount = parseFloat(document.getElementById("amount").value);
+
+      if (!foodDB[food] || isNaN(amount)) {
+        alert("Enter a valid food and amount.");
         return;
       }
-      const food = foodDatabase[name];
+
+      const ratio = amount / 100;
       const entry = {
-        name,
-        qty,
-        calories: (food.calories * qty) / 100,
-        protein: (food.protein * qty) / 100,
-        carbs: (food.carbs * qty) / 100,
-        fats: (food.fats * qty) / 100
+        food,
+        amount,
+        protein: +(foodDB[food].protein * ratio).toFixed(2),
+        carbs: +(foodDB[food].carbs * ratio).toFixed(2),
+        fat: +(foodDB[food].fat * ratio).toFixed(2)
       };
-      log.push(entry);
-      updateTable();
-      document.getElementById('foodName').value = "";
-      document.getElementById('quantity').value = "";
+
+      entries.push(entry);
+      saveAndRender();
     }
 
-    function updateTable() {
-      const tbody = document.querySelector('#logTable tbody');
+    function saveAndRender() {
+      localStorage.setItem("nutritionEntries", JSON.stringify(entries));
+      renderTable();
+    }
+
+    function renderTable() {
+      const tbody = document.querySelector("#entriesTable tbody");
       tbody.innerHTML = "";
-      let totalCal = 0, totalProtein = 0, totalCarbs = 0, totalFats = 0;
-      log.forEach((item, index) => {
-        totalCal += item.calories;
-        totalProtein += item.protein;
-        totalCarbs += item.carbs;
-        totalFats += item.fats;
-        const row = `<tr>
-          <td>${item.name}</td>
-          <td>${item.qty}</td>
-          <td>${item.calories.toFixed(1)}</td>
-          <td>${item.protein.toFixed(1)}</td>
-          <td>${item.carbs.toFixed(1)}</td>
-          <td>${item.fats.toFixed(1)}</td>
-          <td><button onclick="removeItem(${index})">Delete</button></td>
-        </tr>`;
-        tbody.innerHTML += row;
+
+      let totals = { protein: 0, carbs: 0, fat: 0 };
+
+      entries.forEach((entry, index) => {
+        totals.protein += entry.protein;
+        totals.carbs += entry.carbs;
+        totals.fat += entry.fat;
+
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${entry.food}</td>
+          <td>${entry.amount}</td>
+          <td>${entry.protein}</td>
+          <td>${entry.carbs}</td>
+          <td>${entry.fat}</td>
+          <td>
+            <button onclick="editEntry(${index})">Edit</button>
+            <button onclick="deleteEntry(${index})">Delete</button>
+          </td>
+        `;
+        tbody.appendChild(row);
       });
-      document.getElementById('totalCal').textContent = totalCal.toFixed(1);
-      document.getElementById('totalProtein').textContent = totalProtein.toFixed(1);
-      document.getElementById('totalCarbs').textContent = totalCarbs.toFixed(1);
-      document.getElementById('totalFats').textContent = totalFats.toFixed(1);
+
+      document.getElementById("totals").textContent =
+        `Protein: ${totals.protein.toFixed(2)} | Carbs: ${totals.carbs.toFixed(2)} | Fat: ${totals.fat.toFixed(2)}`;
     }
 
-    function removeItem(index) {
-      log.splice(index, 1);
-      updateTable();
+    function deleteEntry(index) {
+      entries.splice(index, 1);
+      saveAndRender();
     }
+
+    function editEntry(index) {
+      const entry = entries[index];
+      document.getElementById("foodName").value = entry.food;
+      document.getElementById("amount").value = entry.amount;
+      entries.splice(index, 1);
+      saveAndRender();
+    }
+
+    function clearAll() {
+      if (confirm("Are you sure you want to clear all entries?")) {
+        entries.length = 0;
+        saveAndRender();
+      }
+    }
+
+    // Initial setup
+    updateFoodList();
+    renderTable();
   </script>
 </body>
 </html>
