--- a/Nutrition_Tracker.html
+++ b/Nutrition_Tracker.html
@@ -1,166 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Nutrition Tracker</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial; padding: 20px; }
-    input, select, button { margin: 5px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 0 20px;
+    }
+    input, select, button {
+      margin: 5px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+    }
+    .totals {
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <h2>Nutrition Tracker</h2>
 
-  <label>Food:
-    <input id="foodName" placeholder="e.g. chicken breast" oninput="autocompleteFood()" list="foodList">
-  </label>
-  <datalist id="foodList"></datalist>
+  <label for="date">Date:</label>
+  <input type="date" id="log-date" />
 
-  <label>Amount (grams):
-    <input type="number" id="amount" value="100">
-  </label>
+  <br><br>
 
+  <input type="text" id="food-name" placeholder="Food Name" list="food-list">
+  <input type="number" id="grams" placeholder="Grams" min="0">
   <button onclick="addEntry()">Add</button>
-  <button onclick="clearAll()">Clear All</button>
+  <button onclick="exportLogs()">Export Logs</button>
 
-  <table id="entriesTable">
+  <datalist id="food-list"></datalist>
+
+  <table id="log-table">
     <thead>
-      <tr><th>Food</th><th>Grams</th><th>Protein (g)</th><th>Carbs (g)</th><th>Fat (g)</th><th>Actions</th></tr>
+      <tr>
+        <th>Food</th><th>Grams</th><th>Calories</th><th>Protein (g)</th><th>Carbs (g)</th><th>Fat (g)</th><th>Actions</th>
+      </tr>
     </thead>
     <tbody></tbody>
+    <tfoot>
+      <tr class="totals">
+        <td colspan="2">Total</td>
+        <td id="total-calories">0</td>
+        <td id="total-protein">0</td>
+        <td id="total-carbs">0</td>
+        <td id="total-fat">0</td>
+        <td></td>
+      </tr>
+    </tfoot>
   </table>
 
-  <h3>Total (g)</h3>
-  <p id="totals">Protein: 0 | Carbs: 0 | Fat: 0</p>
+  <canvas id="nutritionChart" height="100"></canvas>
 
   <script>
     const foodDB = {
-      "chicken breast": { protein: 31, carbs: 0, fat: 3.6 },
-      "steak": { protein: 25, carbs: 0, fat: 19 },
-      "ground beef": { protein: 26, carbs: 0, fat: 20 },
-      "chicken drumsticks": { protein: 28, carbs: 0, fat: 8 },
-      "salmon": { protein: 20, carbs: 0, fat: 13 },
-      "tuna": { protein: 29, carbs: 0, fat: 1 },
-      "shrimp": { protein: 24, carbs: 0, fat: 1 },
-      "cheese": { protein: 25, carbs: 1.3, fat: 33 },
-      "yogurt": { protein: 10, carbs: 4, fat: 5 },
-      "milk": { protein: 3.4, carbs: 5, fat: 3.6 },
-      "banana": { protein: 1.3, carbs: 23, fat: 0.3 },
-      "apple": { protein: 0.3, carbs: 14, fat: 0.2 },
-      "orange": { protein: 0.9, carbs: 12, fat: 0.1 },
-      "broccoli": { protein: 2.8, carbs: 7, fat: 0.4 },
-      "spinach": { protein: 2.9, carbs: 3.6, fat: 0.4 },
-      "carrots": { protein: 0.9, carbs: 10, fat: 0.2 },
-      "brown rice": { protein: 2.6, carbs: 23, fat: 0.9 },
-      "oats": { protein: 13, carbs: 68, fat: 7 },
-      "bread": { protein: 9, carbs: 49, fat: 3 },
-      "lentils": { protein: 9, carbs: 20, fat: 0.4 },
-      "black beans": { protein: 9, carbs: 23, fat: 0.3 },
-      "chickpeas": { protein: 9, carbs: 27, fat: 2.6 },
-      "almonds": { protein: 21, carbs: 22, fat: 49 },
-      "peanut butter": { protein: 25, carbs: 20, fat: 50 }
+      "chicken breast": { cal: 165, protein: 31, carbs: 0, fat: 3.6 },
+      "steak": { cal: 271, protein: 25, carbs: 0, fat: 19 },
+      "ground beef": { cal: 250, protein: 26, carbs: 0, fat: 17 },
+      "chicken drumstick": { cal: 174, protein: 22, carbs: 0, fat: 9 },
+      "salmon": { cal: 208, protein: 20, carbs: 0, fat: 13 },
+      "tuna": { cal: 132, protein: 28, carbs: 0, fat: 1.3 },
+      "shrimp": { cal: 99, protein: 24, carbs: 0.2, fat: 0.3 },
+      "cheese": { cal: 402, protein: 25, carbs: 1.3, fat: 33 },
+      "yogurt": { cal: 59, protein: 10, carbs: 3.6, fat: 0.4 },
+      "milk": { cal: 42, protein: 3.4, carbs: 5, fat: 1 },
+      "banana": { cal: 89, protein: 1.1, carbs: 23, fat: 0.3 },
+      "apple": { cal: 52, protein: 0.3, carbs: 14, fat: 0.2 },
+      "orange": { cal: 47, protein: 0.9, carbs: 12, fat: 0.1 },
+      "broccoli": { cal: 34, protein: 2.8, carbs: 7, fat: 0.4 },
+      "spinach": { cal: 23, protein: 2.9, carbs: 3.6, fat: 0.4 },
+      "carrots": { cal: 41, protein: 0.9, carbs: 10, fat: 0.2 },
+      "brown rice": { cal: 111, protein: 2.6, carbs: 23, fat: 0.9 },
+      "oats": { cal: 389, protein: 17, carbs: 66, fat: 7 },
+      "bread": { cal: 265, protein: 9, carbs: 49, fat: 3.2 },
+      "lentils": { cal: 116, protein: 9, carbs: 20, fat: 0.4 },
+      "black beans": { cal: 132, protein: 8.9, carbs: 24, fat: 0.5 },
+      "chickpeas": { cal: 164, protein: 8.9, carbs: 27, fat: 2.6 },
+      "almonds": { cal: 579, protein: 21, carbs: 22, fat: 50 },
+      "peanut butter": { cal: 588, protein: 25, carbs: 20, fat: 50 }
     };
 
-    const entries = JSON.parse(localStorage.getItem("nutritionEntries")) || [];
+    const logTable = document.querySelector("#log-table tbody");
+    const totals = {
+      cal: document.getElementById("total-calories"),
+      protein: document.getElementById("total-protein"),
+      carbs: document.getElementById("total-carbs"),
+      fat: document.getElementById("total-fat")
+    };
+    const dateInput = document.getElementById("log-date");
+    let currentDate = new Date().toISOString().slice(0, 10);
+    dateInput.value = currentDate;
+    dateInput.addEventListener('change', () => {
+      currentDate = dateInput.value;
+      renderLog();
+    });
 
-    function updateFoodList() {
-      const list = document.getElementById("foodList");
-      list.innerHTML = "";
+    let chart;
+    document.addEventListener("DOMContentLoaded", () => {
+      const datalist = document.getElementById("food-list");
       Object.keys(foodDB).forEach(food => {
         const option = document.createElement("option");
         option.value = food;
-        list.appendChild(option);
+        datalist.appendChild(option);
       });
-    }
-
-    function autocompleteFood() {
-      const input = document.getElementById("foodName").value.toLowerCase();
-      updateFoodList();
-    }
+      renderLog();
+      renderChart();
+    });
 
     function addEntry() {
-      const food = document.getElementById("foodName").value.toLowerCase();
-      const amount = parseFloat(document.getElementById("amount").value);
+      const food = document.getElementById("food-name").value.toLowerCase();
+      const grams = parseFloat(document.getElementById("grams").value);
+      if (!foodDB[food] || isNaN(grams)) return alert("Invalid input");
 
-      if (!foodDB[food] || isNaN(amount)) {
-        alert("Enter a valid food and amount.");
-        return;
-      }
-
-      const ratio = amount / 100;
+      const ratio = grams / 100;
       const entry = {
         food,
-        amount,
+        grams,
+        calories: +(foodDB[food].cal * ratio).toFixed(2),
         protein: +(foodDB[food].protein * ratio).toFixed(2),
         carbs: +(foodDB[food].carbs * ratio).toFixed(2),
         fat: +(foodDB[food].fat * ratio).toFixed(2)
       };
 
-      entries.push(entry);
-      saveAndRender();
+      const logs = getLogs();
+      logs.push(entry);
+      saveLogs(logs);
+      renderLog();
+      renderChart();
     }
 
-    function saveAndRender() {
-      localStorage.setItem("nutritionEntries", JSON.stringify(entries));
-      renderTable();
-    }
+    function renderLog() {
+      const logs = getLogs();
+      logTable.innerHTML = "";
+      let tCal = 0, tP = 0, tC = 0, tF = 0;
 
-    function renderTable() {
-      const tbody = document.querySelector("#entriesTable tbody");
-      tbody.innerHTML = "";
-
-      let totals = { protein: 0, carbs: 0, fat: 0 };
-
-      entries.forEach((entry, index) => {
-        totals.protein += entry.protein;
-        totals.carbs += entry.carbs;
-        totals.fat += entry.fat;
-
-        const row = document.createElement("tr");
+      logs.forEach((entry, idx) => {
+        const row = logTable.insertRow();
         row.innerHTML = `
           <td>${entry.food}</td>
-          <td>${entry.amount}</td>
+          <td>${entry.grams}</td>
+          <td>${entry.calories}</td>
           <td>${entry.protein}</td>
           <td>${entry.carbs}</td>
           <td>${entry.fat}</td>
           <td>
-            <button onclick="editEntry(${index})">Edit</button>
-            <button onclick="deleteEntry(${index})">Delete</button>
+            <button onclick="editEntry(${idx})">Edit</button>
+            <button onclick="deleteEntry(${idx})">X</button>
           </td>
         `;
-        tbody.appendChild(row);
+        tCal += entry.calories;
+        tP += entry.protein;
+        tC += entry.carbs;
+        tF += entry.fat;
       });
 
-      document.getElementById("totals").textContent =
-        `Protein: ${totals.protein.toFixed(2)} | Carbs: ${totals.carbs.toFixed(2)} | Fat: ${totals.fat.toFixed(2)}`;
-    }
-
-    function deleteEntry(index) {
-      entries.splice(index, 1);
-      saveAndRender();
+      totals.cal.textContent = tCal.toFixed(2);
+      totals.protein.textContent = tP.toFixed(2);
+      totals.carbs.textContent = tC.toFixed(2);
+      totals.fat.textContent = tF.toFixed(2);
     }
 
     function editEntry(index) {
-      const entry = entries[index];
-      document.getElementById("foodName").value = entry.food;
-      document.getElementById("amount").value = entry.amount;
-      entries.splice(index, 1);
-      saveAndRender();
+      const logs = getLogs();
+      const item = logs[index];
+      document.getElementById("food-name").value = item.food;
+      document.getElementById("grams").value = item.grams;
+      logs.splice(index, 1);
+      saveLogs(logs);
+      renderLog();
+      renderChart();
     }
 
-    function clearAll() {
-      if (confirm("Are you sure you want to clear all entries?")) {
-        entries.length = 0;
-        saveAndRender();
-      }
+    function deleteEntry(index) {
+      const logs = getLogs();
+      logs.splice(index, 1);
+      saveLogs(logs);
+      renderLog();
+      renderChart();
     }
 
-    // Initial setup
-    updateFoodList();
-    renderTable();
+    function getLogs() {
+      const key = "log-" + currentDate;
+      return JSON.parse(localStorage.getItem(key)) || [];
+    }
+
+    function saveLogs(data) {
+      const key = "log-" + currentDate;
+      localStorage.setItem(key, JSON.stringify(data));
+    }
+
+    function exportLogs() {
+      const allKeys = Object.keys(localStorage).filter(k => k.startsWith("log-"));
+      const allLogs = {};
+      allKeys.forEach(k => {
+        allLogs[k] = JSON.parse(localStorage.getItem(k));
+      });
+
+      const blob = new Blob([JSON.stringify(allLogs, null, 2)], { type: "application/json" });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "nutrition_logs.json";
+      a.click();
+    }
+
+    function renderChart() {
+      const labels = [], calories = [], proteins = [];
+      Object.keys(localStorage).filter(k => k.startsWith("log-")).sort().forEach(dateKey => {
+        const entries = JSON.parse(localStorage.getItem(dateKey));
+        labels.push(dateKey.replace("log-", ""));
+        calories.push(entries.reduce((sum, e) => sum + e.calories, 0));
+        proteins.push(entries.reduce((sum, e) => sum + e.protein, 0));
+      });
+
+      const ctx = document.getElementById("nutritionChart").getContext("2d");
+      if (chart) chart.destroy();
+      chart = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels,
+          datasets: [
+            {
+              label: "Calories",
+              data: calories,
+              borderColor: "red",
+              fill: false
+            },
+            {
+              label: "Protein (g)",
+              data: proteins,
+              borderColor: "blue",
+              fill: false
+            }
+          ]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            y: { beginAtZero: true }
+          }
+        }
+      });
+    }
   </script>
 </body>
 </html>
