--- a/Nutrition_Tracker.html
+++ b/Nutrition_Tracker.html
@@ -23,8 +23,11 @@
   label {
     display: block;
     font-weight: bold;
-    margin-top: 15px;
+    margin-top: 5px;
     margin-bottom: 5px;
+  }
+  .section {
+    margin-bottom: 20px; /* space between sections */
   }
   input, select, button {
     margin: 10px 0;
@@ -65,10 +68,16 @@
     padding: 5px 10px;
     margin: 0 2px;
   }
-  canvas {
-    margin-top: 15px;
-    max-width: 100%;
-    height: auto !important;
+  .chart-container {
+    max-width: 480px;      /* same max width as body */
+    margin: 20px auto;     /* center horizontally, with vertical margin */
+    text-align: center;
+  }
+  #nutritionChart {
+    width: 100% !important;   /* fill container width */
+    height: 300px !important; /* increase height */
+    max-height: 300px;
+    display: inline-block;
   }
 </style>
 </head>
@@ -76,15 +85,21 @@
 
 <h1>Nutrition Tracker</h1>
 
-<label for="log-date">Select Date</label>
-<input type="date" id="log-date" />
+<div class="section">
+  <label for="log-date">Select Date</label>
+  <input type="date" id="log-date" />
+</div>
 
-<label for="food-name">Food Name</label>
-<input list="food-list" id="food-name" placeholder="Type or select a food" autocomplete="off" />
-<datalist id="food-list"></datalist>
+<div class="section">
+  <label for="food-name">Food Name</label>
+  <input list="food-list" id="food-name" placeholder="Type or select a food" autocomplete="off" />
+  <datalist id="food-list"></datalist>
+</div>
 
-<label for="grams">Quantity (grams)</label>
-<input type="number" id="grams" placeholder="100" min="1" />
+<div class="section">
+  <label for="grams">Quantity (grams)</label>
+  <input type="number" id="grams" placeholder="100" min="1" />
+</div>
 
 <button id="add-button">Add Food</button>
 <button id="export-button">Export Logs</button>
@@ -115,7 +130,9 @@
   </tfoot>
 </table>
 
-<canvas id="nutritionChart" aria-label="Calories and protein over time" role="img"></canvas>
+<div class="chart-container">
+  <canvas id="nutritionChart" aria-label="Calories and protein over time" role="img"></canvas>
+</div>
 
 <script>
   const foodDB = {
@@ -161,7 +178,6 @@
   let currentDate = new Date().toISOString().slice(0,10);
   dateInput.value = currentDate;
 
-  // Populate food datalist
   function populateFoodList() {
     const datalist = document.getElementById("food-list");
     datalist.innerHTML = "";
@@ -172,19 +188,16 @@
     });
   }
 
-  // Load logs for currentDate
   function getLogs() {
     const key = "log-" + currentDate;
     return JSON.parse(localStorage.getItem(key)) || [];
   }
 
-  // Save logs for currentDate
   function saveLogs(logs) {
     const key = "log-" + currentDate;
     localStorage.setItem(key, JSON.stringify(logs));
   }
 
-  // Render log table and totals
   function renderLog() {
     const logs = getLogs();
     logTableBody.innerHTML = "";
@@ -220,7 +233,6 @@
     totalsEls.fat.textContent = totalFat.toFixed(1);
   }
 
-  // Add entry
   function addEntry() {
     const food = foodNameInput.value.toLowerCase().trim();
     const grams = parseFloat(gramsInput.value);
@@ -251,7 +263,6 @@
     gramsInput.value = "";
   }
 
-  // Edit entry
   function editEntry(index) {
     const logs = getLogs();
     const entry = logs[index];
@@ -263,7 +274,6 @@
     renderChart();
   }
 
-  // Delete entry
   function deleteEntry(index) {
     const logs = getLogs();
     logs.splice(index, 1);
@@ -272,7 +282,6 @@
     renderChart();
   }
 
-  // Export logs as JSON file
   function exportLogs() {
     const logs = {};
     Object.keys(localStorage).forEach(key => {
@@ -289,7 +298,6 @@
     URL.revokeObjectURL(url);
   }
 
-  // Render Chart.js line chart with Calories and Protein over days
   function renderChart() {
     const keys = Object.keys(localStorage).filter(k => k.startsWith("log-")).sort();
     const labels = [];
@@ -336,12 +344,10 @@
     });
   }
 
-  // Initialize
   populateFoodList();
   renderLog();
   renderChart();
 
-  // Event listeners
   dateInput.addEventListener("change", () => {
     currentDate = dateInput.value;
     renderLog();
@@ -350,7 +356,6 @@
   addBtn.addEventListener("click", addEntry);
   exportBtn.addEventListener("click", exportLogs);
 
-  // Make edit/delete functions global so inline onclick works
   window.editEntry = editEntry;
   window.deleteEntry = deleteEntry;
 </script>
