--- a/Nutrition_Tracker.html
+++ b/Nutrition_Tracker.html
@@ -1,364 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Mobile Nutrition Tracker</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 10px;
-    padding: 0;
-    max-width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-    background: #f8f9fa;
-  }
-  h1 {
-    text-align: center;
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  label {
-    display: block;
-    font-weight: bold;
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-  .section {
-    margin-bottom: 20px; /* space between sections */
-  }
-  input, select, button {
-    margin: 10px 0;
-    padding: 10px;
-    font-size: 1rem;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    width: 100%;
-    box-sizing: border-box;
-  }
-  button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  button:hover {
-    background-color: #0056b3;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 15px;
-    font-size: 0.9rem;
-  }
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-  }
-  th {
-    background-color: #007bff;
-    color: white;
-  }
-  .actions button {
-    font-size: 0.8rem;
-    padding: 5px 10px;
-    margin: 0 2px;
-  }
-  .chart-container {
-    max-width: 480px;      /* same max width as body */
-    margin: 20px auto;     /* center horizontally, with vertical margin */
-    text-align: center;
-  }
-  #nutritionChart {
-    width: 100% !important;   /* fill container width */
-    height: 300px !important; /* increase height */
-    max-height: 300px;
-    display: inline-block;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>Nutrition Tracker</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #f4f4f4;
+    }
+    h2 {
+      margin-top: 30px;
+    }
+    .section {
+      margin-bottom: 25px;
+      padding: 15px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+    label, input, select, button {
+      display: block;
+      margin: 5px 0;
+    }
+    table {
+      width: 100%;
+      margin-top: 10px;
+      border-collapse: collapse;
+    }
+    th, td {
+      padding: 8px;
+      border: 1px solid #ccc;
+    }
+    canvas {
+      display: block;
+      margin: 40px auto;
+      max-width: 600px;
+    }
+    .center {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Nutrition Tracker</h1>
+  <h1>Nutrition Tracker</h1>
 
-<div class="section">
-  <label for="log-date">Select Date</label>
-  <input type="date" id="log-date" />
-</div>
+  <div class="section">
+    <label>Date: <input type="date" id="logDate" /></label>
 
-<div class="section">
-  <label for="food-name">Food Name</label>
-  <input list="food-list" id="food-name" placeholder="Type or select a food" autocomplete="off" />
-  <datalist id="food-list"></datalist>
-</div>
+    <label>Food:
+      <input type="text" id="foodName" placeholder="Enter food name" list="foodList">
+      <datalist id="foodList">
+        <option value="Chicken Breast">
+        <option value="Steak">
+        <option value="Ground Beef">
+        <option value="Chicken Drumsticks">
+        <option value="Salmon">
+        <option value="Tofu">
+        <option value="Eggs">
+        <option value="Protein Shake">
+      </datalist>
+    </label>
 
-<div class="section">
-  <label for="grams">Quantity (grams)</label>
-  <input type="number" id="grams" placeholder="100" min="1" />
-</div>
+    <label>Calories: <input type="number" id="calories" /></label>
+    <label>Protein (g): <input type="number" id="protein" /></label>
+    <label>Fat (g): <input type="number" id="fat" /></label>
+    <label>Carbs (g): <input type="number" id="carbs" /></label>
+    <button onclick="addEntry()">Add Entry</button>
+  </div>
 
-<button id="add-button">Add Food</button>
-<button id="export-button">Export Logs</button>
+  <div class="section">
+    <h2>Logged Entries</h2>
+    <table id="logTable">
+      <thead>
+        <tr>
+          <th>Date</th><th>Food</th><th>Calories</th><th>Protein</th><th>Fat</th><th>Carbs</th><th>Actions</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-<table id="log-table" aria-label="Nutrition log table">
-  <thead>
-    <tr>
-      <th>Food</th>
-      <th>Grams</th>
-      <th>Calories</th>
-      <th>Protein</th>
-      <th>Carbs</th>
-      <th>Fat</th>
-      <th>Timestamp</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-  <tfoot>
-    <tr>
-      <td colspan="2"><strong>Totals</strong></td>
-      <td id="total-calories">0</td>
-      <td id="total-protein">0</td>
-      <td id="total-carbs">0</td>
-      <td id="total-fat">0</td>
-      <td colspan="2"></td>
-    </tr>
-  </tfoot>
-</table>
+  <div class="section center">
+    <h2>Calories & Protein Over Time</h2>
+    <canvas id="logChart"></canvas>
+  </div>
 
-<div class="chart-container">
-  <canvas id="nutritionChart" aria-label="Calories and protein over time" role="img"></canvas>
-</div>
+  <script>
+    let logs = JSON.parse(localStorage.getItem('nutritionLogs')) || [];
 
-<script>
-  const foodDB = {
-    "chicken breast": { cal: 165, protein: 31, carbs: 0, fat: 3.6 },
-    "steak": { cal: 271, protein: 25, carbs: 0, fat: 19 },
-    "ground beef": { cal: 250, protein: 26, carbs: 0, fat: 17 },
-    "chicken drumstick": { cal: 174, protein: 22, carbs: 0, fat: 9 },
-    "salmon": { cal: 208, protein: 20, carbs: 0, fat: 13 },
-    "tuna": { cal: 132, protein: 28, carbs: 0, fat: 1.3 },
-    "shrimp": { cal: 99, protein: 24, carbs: 0.2, fat: 0.3 },
-    "cheese": { cal: 402, protein: 25, carbs: 1.3, fat: 33 },
-    "yogurt": { cal: 59, protein: 10, carbs: 3.6, fat: 0.4 },
-    "milk": { cal: 42, protein: 3.4, carbs: 5, fat: 1 },
-    "banana": { cal: 89, protein: 1.1, carbs: 23, fat: 0.3 },
-    "apple": { cal: 52, protein: 0.3, carbs: 14, fat: 0.2 },
-    "orange": { cal: 47, protein: 0.9, carbs: 12, fat: 0.1 },
-    "broccoli": { cal: 34, protein: 2.8, carbs: 7, fat: 0.4 },
-    "spinach": { cal: 23, protein: 2.9, carbs: 3.6, fat: 0.4 },
-    "carrots": { cal: 41, protein: 0.9, carbs: 10, fat: 0.2 },
-    "brown rice": { cal: 111, protein: 2.6, carbs: 23, fat: 0.9 },
-    "oats": { cal: 389, protein: 17, carbs: 66, fat: 7 },
-    "bread": { cal: 265, protein: 9, carbs: 49, fat: 3.2 },
-    "lentils": { cal: 116, protein: 9, carbs: 20, fat: 0.4 },
-    "black beans": { cal: 132, protein: 8.9, carbs: 24, fat: 0.5 },
-    "chickpeas": { cal: 164, protein: 8.9, carbs: 27, fat: 2.6 },
-    "almonds": { cal: 579, protein: 21, carbs: 22, fat: 50 },
-    "peanut butter": { cal: 588, protein: 25, carbs: 20, fat: 50 }
-  };
+    const BMR = 1506;
+    const TDEE = 2334;
 
-  const dateInput = document.getElementById("log-date");
-  const foodNameInput = document.getElementById("food-name");
-  const gramsInput = document.getElementById("grams");
-  const logTableBody = document.querySelector("#log-table tbody");
-  const totalsEls = {
-    calories: document.getElementById("total-calories"),
-    protein: document.getElementById("total-protein"),
-    carbs: document.getElementById("total-carbs"),
-    fat: document.getElementById("total-fat")
-  };
-  const addBtn = document.getElementById("add-button");
-  const exportBtn = document.getElementById("export-button");
+    function addEntry() {
+      const date = document.getElementById("logDate").value;
+      const food = document.getElementById("foodName").value.trim();
+      const calories = parseFloat(document.getElementById("calories").value);
+      const protein = parseFloat(document.getElementById("protein").value);
+      const fat = parseFloat(document.getElementById("fat").value);
+      const carbs = parseFloat(document.getElementById("carbs").value);
 
-  let currentDate = new Date().toISOString().slice(0,10);
-  dateInput.value = currentDate;
+      if (!date || !food || isNaN(calories)) return alert("Please enter all fields!");
 
-  function populateFoodList() {
-    const datalist = document.getElementById("food-list");
-    datalist.innerHTML = "";
-    Object.keys(foodDB).forEach(food => {
-      const option = document.createElement("option");
-      option.value = food;
-      datalist.appendChild(option);
-    });
-  }
-
-  function getLogs() {
-    const key = "log-" + currentDate;
-    return JSON.parse(localStorage.getItem(key)) || [];
-  }
-
-  function saveLogs(logs) {
-    const key = "log-" + currentDate;
-    localStorage.setItem(key, JSON.stringify(logs));
-  }
-
-  function renderLog() {
-    const logs = getLogs();
-    logTableBody.innerHTML = "";
-    let totalCalories = 0, totalProtein = 0, totalCarbs = 0, totalFat = 0;
-
-    logs.forEach((entry, idx) => {
-      totalCalories += entry.calories;
-      totalProtein += entry.protein;
-      totalCarbs += entry.carbs;
-      totalFat += entry.fat;
-
-      const row = document.createElement("tr");
-      const timeStr = new Date(entry.timestamp).toLocaleTimeString();
-      row.innerHTML = `
-        <td>${entry.food}</td>
-        <td>${entry.grams}</td>
-        <td>${entry.calories.toFixed(1)}</td>
-        <td>${entry.protein.toFixed(1)}</td>
-        <td>${entry.carbs.toFixed(1)}</td>
-        <td>${entry.fat.toFixed(1)}</td>
-        <td>${timeStr}</td>
-        <td class="actions">
-          <button onclick="editEntry(${idx})" aria-label="Edit entry ${entry.food}">✏️</button>
-          <button onclick="deleteEntry(${idx})" aria-label="Delete entry ${entry.food}">🗑️</button>
-        </td>
-      `;
-      logTableBody.appendChild(row);
-    });
-
-    totalsEls.calories.textContent = totalCalories.toFixed(1);
-    totalsEls.protein.textContent = totalProtein.toFixed(1);
-    totalsEls.carbs.textContent = totalCarbs.toFixed(1);
-    totalsEls.fat.textContent = totalFat.toFixed(1);
-  }
-
-  function addEntry() {
-    const food = foodNameInput.value.toLowerCase().trim();
-    const grams = parseFloat(gramsInput.value);
-    if (!foodDB[food]) {
-      alert("Food not found in database");
-      return;
+      logs.push({ date, food, calories, protein, fat, carbs });
+      saveLogs();
+      displayLogs();
+      drawChart();
     }
-    if (isNaN(grams) || grams <= 0) {
-      alert("Enter a valid quantity in grams");
-      return;
+
+    function deleteEntry(index) {
+      logs.splice(index, 1);
+      saveLogs();
+      displayLogs();
+      drawChart();
     }
-    const ratio = grams / 100;
-    const entry = {
-      food,
-      grams,
-      calories: +(foodDB[food].cal * ratio).toFixed(2),
-      protein: +(foodDB[food].protein * ratio).toFixed(2),
-      carbs: +(foodDB[food].carbs * ratio).toFixed(2),
-      fat: +(foodDB[food].fat * ratio).toFixed(2),
-      timestamp: new Date().toISOString()
-    };
-    const logs = getLogs();
-    logs.push(entry);
-    saveLogs(logs);
-    renderLog();
-    renderChart();
-    foodNameInput.value = "";
-    gramsInput.value = "";
-  }
 
-  function editEntry(index) {
-    const logs = getLogs();
-    const entry = logs[index];
-    foodNameInput.value = entry.food;
-    gramsInput.value = entry.grams;
-    logs.splice(index, 1);
-    saveLogs(logs);
-    renderLog();
-    renderChart();
-  }
+    function editEntry(index) {
+      const entry = logs[index];
+      document.getElementById("logDate").value = entry.date;
+      document.getElementById("foodName").value = entry.food;
+      document.getElementById("calories").value = entry.calories;
+      document.getElementById("protein").value = entry.protein;
+      document.getElementById("fat").value = entry.fat;
+      document.getElementById("carbs").value = entry.carbs;
+      deleteEntry(index);
+    }
 
-  function deleteEntry(index) {
-    const logs = getLogs();
-    logs.splice(index, 1);
-    saveLogs(logs);
-    renderLog();
-    renderChart();
-  }
+    function saveLogs() {
+      localStorage.setItem("nutritionLogs", JSON.stringify(logs));
+    }
 
-  function exportLogs() {
-    const logs = {};
-    Object.keys(localStorage).forEach(key => {
-      if (key.startsWith("log-")) {
-        logs[key] = JSON.parse(localStorage.getItem(key));
-      }
-    });
-    const blob = new Blob([JSON.stringify(logs, null, 2)], {type: "application/json"});
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = "nutrition_logs.json";
-    a.click();
-    URL.revokeObjectURL(url);
-  }
+    function displayLogs() {
+      const tbody = document.querySelector("#logTable tbody");
+      tbody.innerHTML = "";
+      logs.forEach((log, i) => {
+        const row = tbody.insertRow();
+        row.innerHTML = `
+          <td>${log.date}</td>
+          <td>${log.food}</td>
+          <td>${log.calories}</td>
+          <td>${log.protein}</td>
+          <td>${log.fat}</td>
+          <td>${log.carbs}</td>
+          <td>
+            <button onclick="editEntry(${i})">Edit</button>
+            <button onclick="deleteEntry(${i})">Delete</button>
+          </td>
+        `;
+      });
+    }
 
-  function renderChart() {
-    const keys = Object.keys(localStorage).filter(k => k.startsWith("log-")).sort();
-    const labels = [];
-    const caloriesData = [];
-    const proteinData = [];
+    function drawChart() {
+      const ctx = document.getElementById('logChart').getContext('2d');
+      const byDate = {};
 
-    keys.forEach(k => {
-      const dayEntries = JSON.parse(localStorage.getItem(k));
-      labels.push(k.replace("log-", ""));
-      caloriesData.push(dayEntries.reduce((sum, e) => sum + e.calories, 0));
-      proteinData.push(dayEntries.reduce((sum, e) => sum + e.protein, 0));
-    });
-
-    const ctx = document.getElementById("nutritionChart").getContext("2d");
-    if (window.chartInstance) window.chartInstance.destroy();
-    window.chartInstance = new Chart(ctx, {
-      type: "line",
-      data: {
-        labels,
-        datasets: [
-          {
-            label: "Calories",
-            data: caloriesData,
-            borderColor: "red",
-            fill: false,
-            tension: 0.1
-          },
-          {
-            label: "Protein (g)",
-            data: proteinData,
-            borderColor: "blue",
-            fill: false,
-            tension: 0.1
-          }
-        ]
-      },
-      options: {
-        responsive: true,
-        scales: {
-          y: { beginAtZero: true, title: { display: true, text: "Amount" } },
-          x: { title: { display: true, text: "Date" } }
+      logs.forEach(log => {
+        if (!byDate[log.date]) {
+          byDate[log.date] = { calories: 0, protein: 0 };
         }
-      }
-    });
-  }
+        byDate[log.date].calories += log.calories;
+        byDate[log.date].protein += log.protein;
+      });
 
-  populateFoodList();
-  renderLog();
-  renderChart();
+      const dates = Object.keys(byDate).sort();
+      const caloriesData = dates.map(d => byDate[d].calories);
+      const proteinData = dates.map(d => byDate[d].protein);
 
-  dateInput.addEventListener("change", () => {
-    currentDate = dateInput.value;
-    renderLog();
-    renderChart();
-  });
-  addBtn.addEventListener("click", addEntry);
-  exportBtn.addEventListener("click", exportLogs);
+      if (window.chartInstance) window.chartInstance.destroy();
 
-  window.editEntry = editEntry;
-  window.deleteEntry = deleteEntry;
-</script>
+      window.chartInstance = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: dates,
+          datasets: [
+            {
+              label: 'Calories',
+              data: caloriesData,
+              borderColor: 'rgba(255,99,132,1)',
+              fill: false
+            },
+            {
+              label: 'Protein (g)',
+              data: proteinData,
+              borderColor: 'rgba(54,162,235,1)',
+              fill: false
+            },
+            {
+              label: 'TDEE (2334)',
+              data: new Array(dates.length).fill(TDEE),
+              borderColor: 'rgba(0,200,0,0.4)',
+              borderDash: [5,5],
+              label: 'TDEE',
+              fill: false
+            },
+            {
+              label: 'BMR (1506)',
+              data: new Array(dates.length).fill(BMR),
+              borderColor: 'rgba(200,0,0,0.4)',
+              borderDash: [5,5],
+              fill: false
+            }
+          ]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          },
+          plugins: {
+            legend: {
+              display: true,
+              position: 'top'
+            }
+          }
+        }
+      });
+    }
 
+    // Add your baseline entry
+    if (!logs.some(l => l.food === 'Daily Target')) {
+      logs.push({
+        date: new Date().toISOString().slice(0, 10),
+        food: 'Daily Target',
+        calories: 1867,
+        protein: 120,
+        fat: 77,
+        carbs: 173
+      });
+      saveLogs();
+    }
+
+    displayLogs();
+    drawChart();
+  </script>
 </body>
 </html>
